// using System;

// namespace CygSoft.Qik
// {
//     public interface ISyntaxValidator
//     {
//         event EventHandler<SyntaxErrorEventArgs> CompileError;
//         bool HasErrors { get; }
//         void Validate(string scriptText);
//     }
// }
